# sqlaxe

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  requirements.txt  setup.cfg
data/sql/: test_sql_commands.sql
sqlaxe/: sqlaxe.py
sqlaxe/lib/: __init__.py  logger.py  sql_formatter.py  sql_grep.py  sql_parser.py  sql_pretty_printer.py  sql_splitter.py  sql_table_drop.py  sql_table_name_replacer.py  sql_table_truncate.py
sqlaxe/test/: context.py  grep.py  sql_name_replacer.py  sql_table_drop.py  sql_table_truncate.py  unit.py
tests/: command_grep_test.py  command_pretty_print_test.py  command_sql_list_fields_test.py  command_sql_table_drop_test.py  command_sql_table_truncate_test.py  run_all_tests.py  sql_name_replacer.py  unit.py
