[metadata]
name = sqlaxe
version = 0.0.8
author = David J Berube
author_email = djberube@berubeconsulting.com
description = SQLAxe - SQL file manipulation tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/djberube/sqlaxe
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages=find:
install_requires =
    sqlglot
    tqdm
    argparse

[options.entry_points]
console_scripts =
    sqlaxe = sqlaxe.sqlaxe:main
