[metadata]
name = sqlaxe
version = 0.0.8
author = David J Berube
author_email = djberube@berubeconsulting.com
description = SQLAxe - SQL file manipulation tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/djberube/sqlaxe
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
license_files = LICENSE
keywords = SQL, manipulation, tool, SQLAxe

[options]
packages=find:
install_requires =
    sqlglot~=25.34.1
    tqdm~=4.67.1
    click~=8.1.7
python_requires = >=3.10

setup_requires =
    setuptools>=42

[options.entry_points]
console_scripts =
    sqlaxe = sqlaxe.sqlaxe:main